# rtw-mod-aid

./: README.md  pyproject.toml
src/scripts/: hello.py  rtw-script.py
test/scripts/: test_rtw-script.py
