[project]
name = "rtw-mod-aid"
version = "0.0.0"
description = "Scripts to help modding RTW remastered"
authors = [
    {name = "Lock9down"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
